k8s/manifests/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: ghcr.io/linuxserver/sabnzbd:5.0.4
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: incomplete-downloads
              mountPath: /incomplete-downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: incomplete-downloads
          persistentVolumeClaim:
            claimName: incomplete-downloads
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
