k8s/manifests/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  type: ClusterIP
  selector:
    app: sabnzbd
  ports:
    - port: 8081
      targetPort: 8080
